--- a/twozero/templates/twozero/grid.html
+++ b/twozero/templates/twozero/grid.html
@@ -59,28 +59,28 @@
 				{% elif no_of_blocks == '4' %}
 					<div class="ui grid cellgrid">
 					<div class="four column row colcell">
-						<button class="submit column cells" id="1"  data-x="0" data-y="0"></button>
+						<button class="submit column cells" id="1"  data-x="0" data-y="0">2</button>
 						<button class="submit column cells" id="2"  data-x="0" data-y="1"></button>
 						<button class="submit column cells" id="3"  data-x="0" data-y="2"></button>
 						<button class="submit column cells" id="4"  data-x="0" data-y="3"></button>
 					</div>
 					<div class="four column row colcell">
 						<button class="submit column cells" id="5"  data-x="1" data-y="0"></button>
-						<button class="submit column cells" id="6"  data-x="1" data-y="1"></button>
+						<button class="submit column cells" id="6"  data-x="1" data-y="1">0</button>
 						<button class="submit column cells" id="7"  data-x="1" data-y="2"></button>
 						<button class="submit column cells" id="8"  data-x="1" data-y="3"></button>
 					</div>
 					<div class="four column row colcell">
 						<button class="submit column cells" id="9"  data-x="2" data-y="0"></button>
 						<button class="submit column cells" id="10"  data-x="2" data-y="1"></button>
-						<button class="submit column cells" id="11"  data-x="2" data-y="2"></button>
+						<button class="submit column cells" id="11"  data-x="2" data-y="2">4</button>
 						<button class="submit column cells" id="12"  data-x="2" data-y="3"></button>
 					</div>
 					<div class="four column row colcell">
 						<button class="submit column cells" id="13"  data-x="3" data-y="0"></button>
 						<button class="submit column cells" id="14"  data-x="3" data-y="1"></button>
 						<button class="submit column cells" id="15"  data-x="3" data-y="2"></button>
-						<button class="submit column cells" id="16"  data-x="3" data-y="3"></button>
+						<button class="submit column cells" id="16"  data-x="3" data-y="3">8</button>
 					</div>
 				</div>
 
@@ -172,7 +172,7 @@
 
 				
 			</div>
-			<div class="ui"
+			<div class="ui segment buttons">
 				<button class="ui submit secondary button upkey">
 					UP
 				</button>
@@ -185,6 +185,7 @@
 				<button class="ui submit secondary button rightkey">
 					RIGHT
 				</button>
+			</div>	
 		</div>	
 	</div>	
 </div>	
