--- a/twozero/templates/twozero/home.html
+++ b/twozero/templates/twozero/home.html
@@ -12,9 +12,17 @@
 <div class="wrapper">
 	<div class="ui segment topsegment">
 		<div class="ui segment mainwindow">
-			<a href="{% url 'option' option=4 %}"><div class ="ui green button four">4*4</div></a>
-			<a href="{% url 'option' option=5 %}"><div class ="ui black button five">5*5</div></a>	
-			<!-- <a href="{% url 'option' option=8 %}"><div class ="ui yellow button eight">8*8</div></a> -->
+			<h1 class="white">SELECT SIZE<h1>
+			<a href="{% url 'option' option=4 %}"><div class ="ui orange button four sizeresolution"><h1>4*4</h1></div></a><br><br>
+			<a href="{% url 'option' option=5 %}"><div class ="ui green button five sizeresolution"><h1>5*5</h1></div></a><br><br><!-- 
+			<a href="{% url 'option' option=8 %}"><div class ="ui green button eight sizeresolution">8*8</div></a> -->
+			<div class="ui horizontal statistics mainicon">
+				<div class="white statistic">
+					<div class="value">
+						<i class="grid layout icon"></i>.2048
+					</div>
+				</div>
+			</div>	
 		</div>
 	</div>	
 </div>	
