--- a/twozero/templates/twozero/grid.html
+++ b/twozero/templates/twozero/grid.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				{% elif no_of_blocks == '4' %}
-					<div class="ui grid cellgrid">
+				<div class="ui grid cellgrid">
 					<div class="four column row colcell">
 						<button class="submit column cells" id="1"  data-x="0" data-y="0">2</button>
 						<button class="submit column cells" id="2"  data-x="0" data-y="1"></button>
@@ -83,7 +83,7 @@
 				</div>
 
 				{% else %}
-					<div class="ui grid cellgrid">
+				<!-- <div class="ui grid cellgrid">
 					<div class="eight column row colcell">
 						<button class="submit column cells" id="1" value=""></button>
 						<button class="submit column cells" id="2" value=""></button>
@@ -164,6 +164,24 @@
 						<button class="submit column cells" id="3" value=""></button>
 						<button class="submit column cells" id="4" value=""></button>
 					</div>	
+				</div> -->
+				<div class="ui grid cellgrid">
+					<div class="four column row colcell">
+						<button class="submit column cells" id="1"  data-x="0" data-y="0">2</button>
+						<button class="submit column cells" id="2"  data-x="0" data-y="1"></button>
+						<button class="submit column cells" id="3"  data-x="0" data-y="2"></button>
+					</div>
+					<div class="four column row colcell">
+						<button class="submit column cells" id="4"  data-x="1" data-y="0"></button>
+						<button class="submit column cells" id="5"  data-x="1" data-y="1">0</button>
+						<button class="submit column cells" id="6"  data-x="1" data-y="2"></button>
+					</div>
+					<div class="four column row colcell">
+						<button class="submit column cells" id="7"  data-x="2" data-y="0"></button>
+						<button class="submit column cells" id="8"  data-x="2" data-y="1"></button>
+						<button class="submit column cells" id="9"  data-x="2" data-y="2">4</button>
+					</div>
+					
 				</div>
 				{% endif %}		
 
