--- a/twozero/templates/twozero/home.html
+++ b/twozero/templates/twozero/home.html
@@ -14,8 +14,8 @@
 		<div class="ui segment mainwindow">
 			<h1 class="white">SELECT SIZE<h1>
 			<a href="{% url 'option' option=4 %}"><div class ="ui orange button four sizeresolution"><h1>4*4</h1></div></a><br><br>
-			<a href="{% url 'option' option=5 %}"><div class ="ui green button five sizeresolution"><h1>5*5</h1></div></a><br><br><!-- 
-			<a href="{% url 'option' option=8 %}"><div class ="ui green button eight sizeresolution">8*8</div></a> -->
+			<a href="{% url 'option' option=5 %}"><div class ="ui green button five sizeresolution"><h1>5*5</h1></div></a><br><br>
+			<!-- <a href="{% url 'option' option=3 %}"><div class ="ui green button eight sizeresolution"><h1>3*3</h1></div></a> -->
 			<div class="ui horizontal statistics mainicon">
 				<div class="white statistic">
 					<div class="value">
